# Cairn

./: .gitignore  README.md  install.sh
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  chunking.py  config.py  conversations.py  db.py  embedder.py  llm.py  main.py  observability.py  retrieval.py
backend/app/api/: auth.py  chat.py  conversations.py  documents.py  search.py  upload.py
backend/eval/: README.md  dataset.json  dataset_ci.json  retrieval_modes.py  run_eval.py  seed_ci.py
backend/eval/results/: eval-20260712-115938.json  eval-20260712-121913.json  eval-20260712-123733.json  eval-20260712-165827.json
db/: run_migrations.py
db/migrations/: 0001_init.sql  0002_fulltext_search.sql  0003_conversations.sql  0004_source_path.sql  0005_multi_tenant.sql  0006_drop_global_content_hash.sql
docs/: PRD.md
docs/archive/: PRD-original-2026-07.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: built-with.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  nav.tsx  strata-stack.tsx
frontend/components/auth/: auth-shell.tsx
frontend/components/dashboard/: chat-panel.tsx  sidebar.tsx  token-gate.tsx  upload-modal.tsx
frontend/lib/: api.ts
infra/: .env.example  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
infra/grafana/provisioning/dashboards/: cairn.json  dashboard.yml
ingest/: .env.example  Cargo.toml
ingest/examples/: embed_test.rs
ingest/src/: chunker.rs  db.rs  embedder.rs  lib.rs  main.rs  parser.rs
ingest/test_vault/: note1.md  note2.md
