[tool.poetry]
name = "cairn-backend"
version = "0.1.0"
description = "Cairn backend — retrieval and chat orchestration"
authors = ["Akshat"]

[tool.poetry.dependencies]
asyncpg = "^0.30.0"
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic-settings = "^2.4.0"
fastembed = "0.4.0"
httpx = "^0.27.0"
pyjwt = "^2.9.0"
bcrypt = ">=4.0.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.9"
prometheus-client = "^0.21.0"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"