[package]
name = "cairn-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
pulldown-cmark = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }